--- a/templates/scatterplotInitial.html
+++ b/templates/scatterplotInitial.html
@@ -46,6 +46,7 @@ let scatterplotTooltip = d3.select('.scatterDiv').append('div')
     .style("cursor", "default")
     .style("top", "0px")
     .style("left", "50%")
+    .style("z-index", 1)
 
 // SideBar
 let scatterplotSideBar = d3.select('.scatterDiv').append('div')
