Add scroll event for initializing chart
Add event listener on window for scrolling
Trigger updateScatter() once user has scrolled all the way to through to the second page
Remove event listener
Update README with source

--- a/templates/scatterplotCSV.html
+++ b/templates/scatterplotCSV.html
@@ -601,7 +601,23 @@ d3.csv("{{url_for('static', filename='data/pokemon.csv')}}").then(function(data)
 
 // -------------------Run initializations/Function calls------------------------//
 
-	updateScatter(xAxisVar, yAxisVar, filtVar, start=true)
+	// Initialize scatterplot once user has scrolled to the second page fully
+	let ticking = false
+	let scrollPos = 0
+
+	let scrollEvent = window.addEventListener("scroll", function(e) {
+		scrollPos = window.scrollY
+
+		if (!ticking) {
+			ticking = false;
+
+			if (scrollPos >= window.innerHeight) {
+				setTimeout(updateScatter(xAxisVar, yAxisVar, filtVar, start=true), 200);
+				window.removeEventListener("scroll", scrollEvent)
+			ticking = true
+			}
+		}
+	})
 
 });
 </script>
