--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,19 +46,62 @@ h1 {
 }
 
 .headerh1 {
-    background-image: linear-gradient(to right, rgb(123, 171, 175), rgb(204, 70, 159) 12%, rgb(180, 20, 20) 16%, rgb(212, 119, 37) 23%, rgb(114, 112, 76) 32%, rgb(205, 185, 10) 40%, rgb(9, 141, 20) 48%, rgb(143, 157, 216) 56%, rgb(59, 65, 186) 70%, rgb(117, 29, 140) 78%, rgb(134, 131, 131) 92%, rgb(34, 29, 0));
+    background-image: linear-gradient(100deg, rgb(84, 201, 212), rgb(204, 70, 159), rgb(180, 20, 20), rgb(212, 119, 37), rgb(114, 112, 76), rgb(205, 185, 10), rgb(9, 141, 20), rgb(143, 157, 216), rgb(59, 65, 186), rgb(117, 29, 140), rgb(134, 131, 131), rgb(34, 29, 0) 90%);
     color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
     width: min-content;
+/* }
+.headerh1 {  */
+    /* height: 100%;
+    width: 100%; */
+    /* left:0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: absolute; */
+  /* background-image: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3); */
+  background-size: 3000% 3000%;
+  /* background-position: absolute 0, 0, 0, 0; */
+  
+  /* -webkit-animation: rainbow 18s ease infinite;
+  -z-animation: rainbow 18s ease infinite;
+  -o-animation: rainbow 18s ease infinite; */
+    animation: rainbow 30s linear infinite;
+    animation-delay: 6s;
+    animation-fill-mode: backwards;
 }
+  
+  /* @-webkit-keyframes rainbow {
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  }
+  @-moz-keyframes rainbow {
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  }
+  @-o-keyframes rainbow {
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  } */
+  @keyframes rainbow { 
+      0%{background-position:0%}
+      50%{background-position:100%}
+      100%{background-position:0%}
+  }
 
 .splash {
     height: 100vh;
     width: 100vw;
     margin: 0;
 }
-
+@keyframes example {
+    from {opacity: 0;}
+    to {opacity: 0.65;}
+}
 .backgroundImg {
     background-image: url(../img/splash.png);
     background-size: cover;
@@ -67,8 +110,12 @@ h1 {
     width: inherit;
     z-index: -2;
     position: absolute;
-    opacity: 0.65
-}
+    opacity: 0;
+    animation-name: example;
+    animation-delay: 1s;
+    animation-duration: 6s;
+    animation-fill-mode: forwards;
+} 
 
 .toSecondPage {
     left: 48%;
