Add animation for down arrow on splash page
Animation delay
Infinite loop for 'breathing' up and down
Add webkit rules

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -146,6 +146,58 @@ h1 {
     border: solid black;
     border-width: 9px 9px 0px 0;
     box-shadow: 8px -8px white;
+    animation: down-arrow 4.5s linear infinite;
+    -webkit-animation: down-arrow 4.5s linear infinite;
+    -moz-animation: down-arrow 4.5s linear infinite;
+    -o-animation: down-arrow 4.5s linear infinite;
+    animation-delay: 3s;
+    -webkit-animation-delay: 3s;
+    -moz-animation-delay: 3s;
+    -o-animation-delay: 3s;
+}
+@keyframes down-arrow {
+    0% {bottom: 56px}
+    20% {bottom: 60px}
+    40% {bottom: 56px}
+    42.5% {bottom: 55px}
+    50% {bottom: 56px}
+    70% {bottom: 60px}
+    90% {bottom: 56px}
+    92.5% {bottom: 55px}
+    100% {bottom: 56px}
+}
+@-webkit-keyframes down-arrow {
+    0% {bottom: 56px}
+    20% {bottom: 60px}
+    40% {bottom: 56px}
+    42.5% {bottom: 55px}
+    50% {bottom: 56px}
+    70% {bottom: 60px}
+    90% {bottom: 56px}
+    92.5% {bottom: 55px}
+    100% {bottom: 56px}
+}
+@-moz-keyframes down-arrow {
+    0% {bottom: 56px}
+    20% {bottom: 60px}
+    40% {bottom: 56px}
+    42.5% {bottom: 55px}
+    50% {bottom: 56px}
+    70% {bottom: 60px}
+    90% {bottom: 56px}
+    92.5% {bottom: 55px}
+    100% {bottom: 56px}
+}
+@-o-keyframes down-arrow {
+    0% {bottom: 56px}
+    20% {bottom: 60px}
+    40% {bottom: 56px}
+    42.5% {bottom: 55px}
+    50% {bottom: 56px}
+    70% {bottom: 60px}
+    90% {bottom: 56px}
+    92.5% {bottom: 55px}
+    100% {bottom: 56px}
 }
 
 .toFooter {
